...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/save_bitmap_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/bitmap_filename_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_bitmap_radio_button_filename"/>

                <EditText
                    android:id="@+id/bitmap_filename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/save_bitmap_filename"

                    android:inputType="textUri"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <RadioButton
                    android:id="@+id/bitmap_set_as_background_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_bitmap_set_as_background"/>

            </RadioGroup>

...
