...
        android:id="@+id/fractalList"
        android:icon="@drawable/levels"
        android:title="@string/listMenuItem"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/saveMenuItem"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/parameters"
...
